--- a/styles/toast.css
+++ b/styles/toast.css
@@ -75,7 +75,7 @@ body {
   display: block;
   height: 20px;
   width: 20px;
-  background: url('../resources/xmark-solid.svg') no-repeat center;
+  background: url('../resources/xmark-solid-black.svg') no-repeat center;
 }
 
 .toast-content .success { 
